# fastapi-beanie-finance

./: .env  README.md  database.py  divisao_tarefas.txt  main.py  models.py  pyproject.toml
endpoints/: account.py  category.py  transaction.py  user.py
models/: account.py  category.py  transaction.py  user.py
