[project]
name = "fastapi-beanie-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beanie>=2.0.1",
    "dnspython>=2.8.0",
    "fastapi[standard]>=0.128.0",
    "motor[srv]>=3.7.1",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
